# NNClassificationCpp

./: .gitignore  CMakeLists.txt  README.md
include/: NNAccuracy.h  NNActivation.h  NNActivationLoss.h  NNHelper.h  NNInput.h  NNLayer.h  NNLoss.h
include/Optimizers/: BaseOptimizer.h  SGD.h
src/: NNAccuracy.cpp  NNActivation.cpp  NNActivationLoss.cpp  NNHelper.cpp  NNInput.cpp  NNLayer.cpp  NNLoss.cpp  main.cpp
src/Optimizers/: SGD.cpp
tests/: main.cpp
tests/Helper/: test.cpp
tests/Layer/: test.cpp
tests/Loss/: test.cpp
tests/config/: catch_config.hpp
